# afe-project

./: .gitignore  CLA.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md
sdk/: .gitignore  Cargo.toml  LICENSE  README.md  VISION.md
sdk/examples/: bench_dir_zenscan.rs  bench_physics.rs  bench_zenscan.rs  verify_real_pcap.rs  verify_zenscan.rs
sdk/src/: accumulator.rs  aggregate.wgsl  analytics.rs  compression.rs  config.rs  domain.rs  export.rs  ffi.rs  filter.rs  filter.wgsl  filter_rows.wgsl  group.rs  history.rs  lib.rs  main.rs  report.rs  streaming.rs  utils.rs  vectorize.wgsl  zone_map.rs
sdk/src/analytics/: csv_parser.rs  fallback_parser.rs  hybrid.rs  ioc.rs  join.rs  simd.rs  zenscan.rs
sdk/src/cli/: mod.rs
sdk/src/cli/handlers/: analyze.rs  bench.rs  config.rs  export.rs  history.rs  index.rs  mod.rs  search.rs  utils.rs  view.rs
sdk/src/compute/: driver.rs  kernels.rs  mod.rs  pipeline.rs
sdk/src/compute/dma/: mod.rs  provider.rs
sdk/src/compute/dma/gpu/: cpu.rs  mod.rs  vulkan.rs  wgpu_upload.rs
sdk/src/compute/dma/memory/: hugepages.rs  mod.rs  pinned.rs  standard.rs
sdk/src/compute/dma/storage/: io_uring.rs  mod.rs  native.rs  spdk.rs
sdk/src/dataset/: analysis.rs  delta.rs  discovery.rs  mod.rs
sdk/src/engine/: analysis.rs  helpers.rs  ingest.rs  mod.rs  search.rs
sdk/src/parsers/: mod.rs
sdk/src/parsers/big_data/: csv.rs  json.rs
sdk/src/parsers/forensics/: evtx.rs  mod.rs  pcap.rs  raw_logs.rs
sdk/src/types/: blueprint.rs  hardware.rs  mod.rs  options.rs  results.rs  schema.rs  traits.rs  zones.rs
(+37 files in other folders)
